--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@400;500&family=Open+Sans:wght@600&family=Oswald:wght@400;600&display=swap" rel="stylesheet">
+
+<!-- Lobster Font -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather&family=Montserrat:wght@400;500&family=Open+Sans:wght@600&family=Oswald:wght@400;600&display=swap" rel="stylesheet">
+
     <title>React App</title>
   </head>
   <body>
