--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@400;500&family=Open+Sans:wght@600&family=Oswald:wght@400;600&display=swap" rel="stylesheet">
 
-<!-- Lobster Font -->
+<!-- Lobster Two Font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Merriweather&family=Montserrat:wght@400;500&family=Open+Sans:wght@600&family=Oswald:wght@400;600&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>Foodies Delight</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
